# gearbot

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/gearbot/: __init__.py  __main__.py  agent.py  gearbot.py  graph.py
src/gearbot/agents/: __init__.py  web.py
src/gearbot/config/: __init__.py  config.py
src/gearbot/core/: __init__.py  browser.py  nodes.py  state.py
src/gearbot/graph/: __init__.py  graph.py
src/gearbot/tools/: __init__.py  web.py
src/gearbot/web/: __init__.py  agent.py
