[project]
name = "gearbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.15",
    "langchain-xai>=1.2.2",
    "langgraph>=1.1.6",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "rich>=15.0.0",
]
[project.scripts]
gearbot = "gearbot.__main__:run"

# === Configuración importante para src layout ===
[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.uv]
package = true